[gd_scene load_steps=12 format=3 uid="uid://c114yohjuthyh"]

[ext_resource type="PackedScene" uid="uid://damvskku830yr" path="res://objects/enemies/enemy_base.tscn" id="1_qitfe"]
[ext_resource type="ArrayMesh" uid="uid://dquneugvm4n5p" path="res://assets/models/Ultimate Spaceships/Pancake/OBJ/Pancake.obj" id="2_le80y"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_shielder.gd" id="2_vtu5d"]
[ext_resource type="Texture2D" uid="uid://cm0xq3i478bo2" path="res://assets/models/Ultimate Spaceships/Pancake/Textures/Pancake_Blue.png" id="3_0mdad"]
[ext_resource type="PackedScene" uid="uid://cnhiashwqus8r" path="res://objects/flames/blue_flame.tscn" id="4_0yd3x"]
[ext_resource type="Shader" uid="uid://bid4x5lk8b8bf" path="res://assets/shaders/flame.tres" id="5_m5qdq"]
[ext_resource type="Texture2D" uid="uid://c0vqpubvs84w0" path="res://assets/models/Julius/muzzleflash.png" id="6_vaypu"]
[ext_resource type="AudioStream" uid="uid://m6aefs8puqt5" path="res://assets/audio/Kenney/SciFi/forceField_001.ogg" id="8_1vqxu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sirvg"]
albedo_texture = ExtResource("3_0mdad")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2jgr"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_m5qdq")
shader_parameter/Tint = Color(0.537255, 0, 1, 1)
shader_parameter/FlashTexture = ExtResource("6_vaypu")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_peby0"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("5_m5qdq")
shader_parameter/Tint = Color(0, 0.764706, 1, 1)
shader_parameter/FlashTexture = ExtResource("6_vaypu")

[node name="EnemyShielder" instance=ExtResource("1_qitfe")]
script = ExtResource("2_vtu5d")
max_shield_level = 1
shield_cooldown = 7.0
max_hp = 2
attach_weapons = false

[node name="MeshInstance3D" parent="." index="2"]
mesh = ExtResource("2_le80y")
surface_material_override/0 = SubResource("StandardMaterial3D_sirvg")

[node name="Indicator" parent="." index="3"]
transform = Transform3D(0.999999, 0, 0, 0, 1, -3.55271e-15, 0, 3.55271e-15, 1, 0, -2.66667, 0)

[node name="PurpleFlame" parent="." index="4"]
unique_name_in_owner = false
visible = false
surface_material_override/0 = SubResource("ShaderMaterial_n2jgr")
surface_material_override/1 = SubResource("ShaderMaterial_n2jgr")
surface_material_override/2 = SubResource("ShaderMaterial_n2jgr")

[node name="Flame" parent="." index="5" instance=ExtResource("4_0yd3x")]
unique_name_in_owner = false
transform = Transform3D(-2.5828e-06, 0, -15, 0, 10, 0, 10, 0, -3.07954e-06, 4.53876, 0, 0)
surface_material_override/0 = SubResource("ShaderMaterial_peby0")
surface_material_override/1 = SubResource("ShaderMaterial_peby0")
surface_material_override/2 = SubResource("ShaderMaterial_peby0")

[node name="ShieldTimer" type="Timer" parent="." index="6"]
unique_name_in_owner = true
wait_time = 7.0

[node name="ShieldAudio" type="AudioStreamPlayer3D" parent="." index="7"]
unique_name_in_owner = true
stream = ExtResource("8_1vqxu")
volume_db = -10.0

[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
